--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ nifti = "0.16.0"
 winit = "0.29.10"
 tracing = "0.1"
 tracing-subscriber = "0.3"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
